# introspection

./: .coveralls.yml  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: check.yml  release.yml  test.yml
bourbaki/introspection/: __init__.py  builtin_signatures.py  callables.py  classes.py  debug.py  docstrings.py  generic_dispatch.py  generic_dispatch_helpers.py  imports.py  polymorphism.py  prettyprint.py  simple_repr.py  typechecking.py  utils.py  wrappers.py
bourbaki/introspection/types/: __init__.py  abcs.py  compat.py  evaluation.py  inspection.py  issubclass_generic_.py
src/bourbaki/introspection/: __init__.py  builtin_signatures.py  callables.py  classes.py  docstrings.py  generic_dispatch.py  generic_dispatch_helpers.py  imports.py  polymorphism.py  prettyprint.py  references.py  simple_repr.py  subclassing.py  typechecking.py  utils.py  wrappers.py
src/bourbaki/introspection/object_models/: scala.py
src/bourbaki/introspection/types/: __init__.py  abcs.py  compat.py  evaluation.py  inspection.py  issubclass_generic_.py
tests/: test_callables.py  test_classes.py  test_docstrings.py  test_generic_dispatch.py  test_import.py  test_imports.py  test_polymorphism.py  test_prettyprint.py  test_references.py  test_simple_repr.py  test_typechecking.py  test_types.py  test_types_namedtuples.py  test_utils.py  test_wrappers.py  test_wrappers_object_models.py
